[package]
name = "self-evolution"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Sovereign Health Monitoring + Self-Evolution v2 Hooks with advanced Epigenetic Blessing, Versioned Persistence, and hybrid error handling. Now wired to Lattice Conductor v13 for conductor-native orchestration."
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
rand = { workspace = true }
thiserror = "1"
anyhow = { version = "1", optional = true }
miette = { version = "7", optional = true }
lattice-conductor-v13 = { path = "../crates/lattice-conductor-v13" }  # Wired for v13 Conductor-native self-evolution

[features]
default = []
anyhow = ["dep:anyhow"]
miette = ["dep:miette"]

[lib]
path = "src/lib.rs"