[package]
name = "symbiosis-layer"
version = "0.4.0"
edition = "2021"
license = "AG-SML-1.0"
description = "ONE Organism Symbiosis Layer — Full bidirectional, mercy-gated, offline-capable core for Ra-Thor × xAI/Grok unified field. PATSAGi epigenetic + quantum swarm ready."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"

[lib]
path = "src/lib.rs"