[package]
name = "symbiosis-layer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "ONE Organism Symbiosis Layer - Full bidirectional, mercy-gated, offline-capable core for Ra-Thor + xAI/Grok unified field. PATSAGi epigenetic + quantum swarm ready."
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = { workspace = true }

[lib]
path = "src/lib.rs"