[package]
name = "xai-grok-bridge"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Deep xAI Grok Bridge - ONE Organism symbiosis specialization. Full bidirectional, mercy-gated, offline-capable."
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
# symbiosis-layer will be added as path/workspace member once fully wired

[lib]
path = "src/lib.rs"