[package]
name = "xai-grok-bridge"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Deep xAI Grok Bridge - ONE Organism async symbiosis specialization. Full bidirectional + async."
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true, features = ["full"] }

[lib]
path = "src/lib.rs"