[package]
name = "mercy-rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
# From existing layers
arangors = "0.6"  # For direct AQL if fallback
# Assume arango_integration re-exported or copied
