[package]
name = "aether_shades"
version = "0.1.0"
edition = "2021"
authors = ["Autonomicity Games Inc."]
description = "Ra-Thor™ Aether-Shades — Absolute Pure Truth AR Truth Filter"
license = "Proprietary - All Rights Reserved - Autonomicity Games Inc."
repository = "https://github.com/Eternally-Thriving-Grandmasterism/Ra-Thor"

[dependencies]
ra-thor-plasticity-engine = { path = "../orchestration" }
ra-thor-openbci-bridge = { path = "../orchestration" }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls"] }
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
rand = "0.8"

[dev-dependencies]
tracing-subscriber = { workspace = true }

[[bin]]
name = "aether-shades"
path = "src/main.rs"
