[package]
name = "deeper_gadgets"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "DeeperGadgets — Recursive Aggregation + Custom PlonK Threshold Proofs Expansion"

[dependencies]
nexi = { path = "../" }
halo2_proofs = { git = "https://github.com/zcash/halo2.git", branch = "v2023_07_18" }
halo2_gadgets = { git = "https://github.com/zcash/halo2.git", branch = "v2023_07_18" }
pasta_curves = "0.5"

[features]
plonk_threshold = ["halo2_gadgets"]
