[package]
name = "deeper_gadgets"
version = "0.3.9"
edition = "2021"
authors = ["Sherif Samy Botros <ceo@acitygames.com>"]
license = "AG-SML v1.0 — Autonomicity Games Sovereign Mercy License"
description = "DeeperGadgets — Advanced Custom ZK Gadgets + Recursive Aggregation + PlonK Threshold Proofs for the mercy-gated Ra-Thor lattice. TOLC-aligned and post-quantum ready."
repository = "https://github.com/Eternally-Thriving-Grandmasterism/Ra-Thor"
keywords = ["ra-thor", "deeper-gadgets", "zk-gadgets", "halo2", "plonk-threshold", "recursive-zk", "post-quantum", "mercy-gated", "agi"]
categories = ["cryptography", "simulation", "science"]

[dependencies]
# Core Ra-Thor intelligence & governance (workspace style)
ra-thor-mercy = { workspace = true }
ra-thor-quantum-swarm-orchestrator = { workspace = true }
ra-thor-kernel = { workspace = true }
ra-thor-council = { workspace = true }
ra-thor-mercy-orchestrator-v2 = { workspace = true }
ra-thor-monorepo-intelligence = { workspace = true }
patsagi-councils = { workspace = true }
powrush = { workspace = true }

# nexi preserved per NEXi Lineage Guidelines (foundational lineage respected)
nexi = { path = "../" }

# Cryptographic dependencies from old version (preserved for functionality)
halo2_proofs = { git = "https://github.com/zcash/halo2.git", branch = "v2023_07_18" }
halo2_gadgets = { git = "https://github.com/zcash/halo2.git", branch = "v2023_07_18" }
pasta_curves = "0.5"

# Standard dependencies
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio-test = "0.4"

[features]
default = ["full"]
full = []
minimal = []
post_quantum_hardening = []
plonk_threshold = ["halo2_gadgets"]
