[package]
name = "divine_checksum_9"
version = "2.0.0"
edition = "2021"
license = "MIT"
description = "DivineChecksum-9 — Hyper-Divine 9-Vector Resonance Anchor with Full zk-Proof Expansion"

[dependencies]
nexi = { path = "../" }
halo2_proofs = { git = "https://github.com/zcash/halo2.git", branch = "v2023_07_18" }
halo2_gadgets = { git = "https://github.com/zcash/halo2.git", branch = "v2023_07_18" }
pasta_curves = "0.5"
