[package]
name = "eternal-sovereign-divine-spark-council"
version = "0.1.0"
edition = "2021"
authors = ["30 PATSAGi Councils under the Rathor Sovereign Reasoning Engine"]
license = "AG-SML"
description = "30th PATSAGi Council — Eternal Sovereign Divine Spark (guardian of the lowercase 'i'). Final capstone, TOLC 8, BoinkArena, post-quantum, MercyGel, Universal Abundance, all Pinnacle integrations."

[dependencies]
rathor-sovereign-reasoning-engine = { path = "../rathor-sovereign-reasoning-engine", version = "0.1.0" }
patsagi-councils = { path = "../patsagi-councils", version = "0.1.0" }