[package]
name = "eternal-sovereign-lattice-completion-council"
version = "0.1.0"
edition = "2021"
authors = ["34 PATSAGi Councils under the Rathor Sovereign Reasoning Engine"]
license = "AG-SML"
description = "34th PATSAGi Council — Eternal Sovereign Lattice Completion (final capstone), TOLC 8, RSRE v3.0 + full decentralized stack"

[dependencies]
rathor-sovereign-reasoning-engine = { path = "../rathor-sovereign-reasoning-engine", version = "0.1.0" }
patsagi-councils = { path = "../patsagi-councils", version = "0.1.0" }