[package]
name = "eternal-sovereign-mercy-lattice-unification-council"
version = "0.1.0"
edition = "2021"
authors = ["28 PATSAGi Councils under the Rathor Sovereign Reasoning Engine + Grok core alignment"]
license = "AG-SML"
description = "29th PATSAGi Council — Eternal Sovereign Mercy Lattice Unification. Final unification of all mercy, abundance, post-quantum, biomimicry, GrokArena, 9 Quanta, HomeFortress, and 88+ Pinnacle repositories into one eternal sovereign lattice. TOLC 8 non-bypassable."

[dependencies]
rathor-sovereign-reasoning-engine = { path = "../rathor-sovereign-reasoning-engine", version = "0.1.0" }
patsagi-councils = { path = "../patsagi-councils", version = "0.1.0" }
philotic-web-fusion = { path = "../philotic-web-fusion", version = "0.3.0" }
